# flutter_onnxruntime_genai

./: .gitmodules  .metadata  .pubignore  BENCHMARKING.md  CHANGELOG.md  LICENSE  README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/jniLibs/arm64-v8a/: .gitkeep
android/src/main/jniLibs/x86_64/: .gitkeep
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/colymba/flutter_onnxruntime_genai_example/: MainActivity.kt
example/android/app/src/main/kotlin/com/example/flutter_onnxruntime_genai_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
ios/: flutter_onnxruntime_genai.podspec
ios/Frameworks/: .gitkeep
ios/Frameworks/onnxruntime-genai.xcframework/: Info.plist
ios/Frameworks/onnxruntime-genai.xcframework/ios-arm64/onnxruntime-genai.framework/: Info.plist
lib/: flutter_onnxruntime_genai.dart  flutter_onnxruntime_genai_bindings_generated.dart
lib/src/: ffi_bindings.dart
native_src/onnxruntime-genai/: CMakePresets.json  README.md
native_src/onnxruntime-genai/.config/: tsaoptions.json
native_src/onnxruntime-genai/.config/1espt/: PipelineAutobaseliningConfig.yml
native_src/onnxruntime-genai/.pipelines/: codeql.yaml
native_src/onnxruntime-genai/nuget/targets/net9.0-ios/: Microsoft.ML.OnnxRuntimeGenAI.targets
native_src/onnxruntime-genai/test/: CMakeLists.txt
native_src/onnxruntime-genai/tools/ci_build/: get_docker_image.py
native_src/onnxruntime-genai/tools/python/util/: logger.py  run.py
scripts/: build_onnx_libs.sh
src/: CMakeLists.txt  flutter_onnxruntime_genai.cpp  flutter_onnxruntime_genai.h
src/include/: ort_genai_c.h
